tests/elab/errors/duplicate_item.snapshot
exit status: 1

stdout = """
def a: Bool = false;
def b: Bool = true;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
8..13 | false                                    | Bool
23..27 | true                                     | Bool
metavars:
?0 = Bool
?1 = Bool
"""

stderr = """
error: duplicate definition of item `a`
  ┌─ tests/elab/errors/duplicate_item.pion:3:5
  │
1 │ def a = false;
  │     - first definition
2 │ def b = true;
3 │ def a = 0;
  │     ^ duplicate definition

error: duplicate definition of item `b`
  ┌─ tests/elab/errors/duplicate_item.pion:4:5
  │
2 │ def b = true;
  │     - first definition
3 │ def a = 0;
4 │ def b = 0;
  │     ^ duplicate definition

aborting due to 2 previous errors
"""
